--- a/shopping.html
+++ b/shopping.html
@@ -20,6 +20,7 @@
 
     <div class="items" id="items">
       <ul id="listed">
+    
       </ul>
     </div>
   </div>
@@ -28,9 +29,7 @@
 </html>
 
 
-
-
-As a user I see an HTML form to create a new list item with a name
-When I click a "Add Item" button
-The form values are reset
-A shopping list item is added to a ul as an li
+As a user I can press a "Complete" button or checkbox, when clicked
+The item is marked as complete
+The item moves to the bottom of the list
+The item becomes gray or semi-transparent to indicate it's complete
