--- a/shopping.html
+++ b/shopping.html
@@ -5,6 +5,8 @@
     <title>Let's Shop!</title>
     <script src="/shopping.js"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato:900' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <h1>Time to Shop!</h1>
