--- a/shopping.html
+++ b/shopping.html
@@ -2,14 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Let's Shop!</title>
+    <title>Bye bye $$$!</title>
     <script src="/shopping.js"></script>
+    <link href="/cherries.ico" rel="icon" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="main.css">
     <link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lato:900' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <h1>Time to Shop!</h1>
+    <h1>Let's Spend That Hard Earned Cash!</h1>
 
   <div class= "container" id="container">
 
